# checkmk-sdp

./: .dockerignore  .gitignore  Dockerfile  README.md  TODO.md  conf.py.sample  docker-compose.yml  main.py  pyproject.toml  sdp-plugin.py
docs/app/: README.md
docs/checkmk/: setup.md
docs/database/: README.md
docs/sdp/: setup.md
src/app/: __init__.py  app.py  auth.py  lifespan.py  notification.py  routes.py
src/app/checkmk/: __init__.py  client.py  exceptions.py  models.py
src/app/coordinator/: __init__.py  client.py
src/app/database/: __init__.py  client.py  exceptions.py  models.py
src/app/database/schemas/: t_checkmk_problems.sql  t_problem_request_links.sql  t_servicedesk_requests.sql
src/app/sdp/: __init__.py  client.py  enums.py  exceptions.py  models.py
src/app/utils/: __init__.py  exceptions.py  log.py  models.py  wrapper.py
testing/sources/: host.sh  service.sh  service_resolved.sh
testsetup/: docker-compose.yml
testsetup/sdp/: Dockerfile  installer.properties
